Micro tab: Added Component=>Particle method
Micro tab: Factored out duplicated code in lattice construction
Micro tab: Fixed dissolving for sodium nitrate
Micro tab: Added generic type parameters to Compound and fixed sucrose crystal dissolving
Micro tab: Crystals dissolve faster
Micro tab: Improvements for crystal dissolving
Micro tab: Factored out strategy pattern for crystal dissolving
# 0.00.70 (54480) Jul 25, 2011
Micro tab: Changed kit 1 "sugar" and "salt" to read "sucrose" and "sodium chloride" with formulae as in the other kits
Micro tab: Changed the word "water" to "solution" for the volume readout when there are particles in the water
Micro tab: Moved the beaker left so that it doesn't overlap with the control panels
Micro tab: Added a - sign after NO3 in the bar chart label
Micro tab: Moved the positive ions to the left of the negative ions in the bar chart
# 0.00.69 (54467) Jul 25, 2011
Micro tab: Changed periodic table highlight color from green to red
Micro tab: Added saturation points for CaCl2, NaNO3 and sucrose for crystal dissolving
Micro tab: Show the volume readout in exponential notation
Micro tab: Fixed: Shaker should go in front of kit panel
Micro tab: Added "Remove Sugar" and "Remove Salt" buttons for kit 1
Micro tab: Added more vertical space for the bar chart caption icons
Micro tab: Spread out the bar chart bars evenly in the x-direction
Micro tab: Added bar chart bars for all the kits
Micro tab: Center bar caption icon underneath text since there is more vertical space than horizontal
Micro tab: Added bar caption icon for sucrose
Micro tab: In the periodic table, use green instead of yellow highlighting because yellow doesn't show up well against pink
Micro tab: In the periodic table, use color squares that are the same size as the element squares
Micro tab: Created a bar chart bar for sucrose
# 0.00.68 (54426) Jul 22, 2011
Micro tab: Added a legend for the periodic table
Micro tab: Added pink background for nonmetals